--- a/quarkus/pom.xml
+++ b/quarkus/pom.xml
@@ -33,27 +33,31 @@
 		<dependency>
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-resteasy</artifactId>
-		</dependency>
+            <version>2.6.1.Final</version>
+        </dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-resteasy-jackson</artifactId>
-		</dependency>
+            <version>2.6.1.Final</version>
+        </dependency>
 
 
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit5</artifactId>
+            <version>2.6.1.Final</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
+            <version>4.4.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
-            <version>3.16.0</version>
+            <version>3.18.2</version>
         </dependency>
     </dependencies>
 	<build>
