--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -22,12 +22,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+            <version>2.6.2</version>
+        </dependency>
 
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.6.2</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
