--- a/quarkus-kotlin/pom.xml
+++ b/quarkus-kotlin/pom.xml
@@ -9,15 +9,15 @@
     <properties>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
         <failsafe.useModulePath>false</failsafe.useModulePath>
-        <kotlin.version>1.6.10</kotlin.version>
+        <kotlin.version>1.9.0</kotlin.version>
         <maven.compiler.release>11</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>2.7.5.Final</quarkus.platform.version>
+        <quarkus.platform.version>3.3.1</quarkus.platform.version>
         <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-        <java-jwt.version>3.19.0</java-jwt.version>
+        <java-jwt.version>4.4.0</java-jwt.version>
     </properties>
     <dependencyManagement>
         <dependencies>
