--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -5,19 +5,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.5</version>
+        <version>3.1.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
     <artifactId>spring-boot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
+	<name>spring-boot</name>
 	<description>JWT Creator with Spring Boot</description>
 
 	<properties>
-		<java.version>11</java.version>
-        <spring-boot.version>2.6.6</spring-boot.version>
-        <java-jwt.version>3.19.0</java-jwt.version>
+		<java.version>17</java.version>
+        <spring-boot.version>3.1.3</spring-boot.version>
+        <java-jwt.version>4.4.0</java-jwt.version>
     </properties>
 
 	<dependencies>
