--- a/kotlin-ktor/pom.xml
+++ b/kotlin-ktor/pom.xml
@@ -8,15 +8,15 @@
     <name>kotlin-ktor</name>
     <description>kotlin-ktor</description>
     <properties>
-        <ktor_version>2.0.0-beta-1</ktor_version>
+        <ktor_version>2.3.9</ktor_version>
         <kotlin.code.style>official</kotlin.code.style>
-        <kotlin_version>1.6.10</kotlin_version>
+        <kotlin_version>1.9.22</kotlin_version>
         <serialization.version>1.3.2</serialization.version>
-        <logback_version>1.2.3</logback_version>
+        <logback_version>1.5.3</logback_version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <main.class>de.test.ApplicationKt</main.class>
-        <java-jwt.version>3.19.0</java-jwt.version>
+        <java-jwt.version>4.4.0</java-jwt.version>
     </properties>
     <repositories>
         <repository>
@@ -87,8 +87,8 @@
 
         <plugins>
             <plugin>
-                <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin_version}</version>
                 <configuration>
                     <jvmTarget>11</jvmTarget>
@@ -123,7 +123,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -138,7 +138,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.7.1</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
