--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.3</version>
+        <version>3.2.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-        <spring-boot.version>3.1.3</spring-boot.version>
+        <spring-boot.version>3.2.4</spring-boot.version>
         <java-jwt.version>4.4.0</java-jwt.version>
     </properties>
 
@@ -50,7 +50,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.6.4</version>
+                <version>${spring-boot.version}</version>
 			</plugin>
 		</plugins>
 	</build>
